--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,41 @@
 
 body{
 
+    
+
+
+
+
+
+
+    
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    padding-bottom: 400px;
+
  
     background-image: url("../images/moroccan-flower.png");
-  
+ 
     
  }
- .navbar-default .navbar-brand {
+ 
+    .navbar-brand{
+        background-color: #4aaaa5;
+        color:white;
+    font-weight: bold;
+
+    }
+     
+.navbar-custom{
+text-emphasis-color: #4aaaa5 ;
+}
+
 
  
 
-
-    color: #d7e2e9;
-}  
+  
 
  .aboutImg{
  float: left;
@@ -20,9 +43,71 @@ body{
 
 
  }
- .footer{
+ footer{
      height: 60px;
      bottom: 0;
      position: fixed;
+     /* max-resolution: 0; */
+     margin-left: auto;
+     margin-right: auto;
      width: 100%;
+border-style: solid none none none;
+border-color:  #4aaaa5;
+border-width: 5px;
  }
+
+
+ .baby{
+    width: 100%; 
+    height: 250px;
+    
+ }
+ .card-body{
+     position: relative;
+ } 
+ .baby-text{
+position: absolute;
+padding: 10px;
+color:white;
+background-color: #4aaaa5;
+width: 100%;
+bottom: 30px;
+
+
+
+ }
+
+#baby2{
+widows: 180px;
+height: 200px;
+
+}
+#baby3{
+    widows: 200px; 
+    height: 200px;
+
+}
+#baby4{
+    widows: 200px; 
+    height: 200px;
+
+}
+#baby5{
+    widows: 200px; 
+    height: 200px;
+
+
+}
+
+
+ 
+h1 {
+    color: #4aaaa5 ;
+    background-color: white;
+   border-bottom: gray;
+   
+    border-width: 1px;
+
+
+
+}
